--- a/index.html
+++ b/index.html
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="style.css">
 
-    <script src="scripts/script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+
+    <script src="script.js" defer></script>
 
     <title>🥛 | 𝙵𝚛𝚊𝚐𝚒𝚕𝚎𝙷𝚞𝚋 </title>
 </head>
 <body>
-    test
+    <header>
+        Welcome to <h2>FragileHub!</h2>
+    </header>
+
+    <section>
+        <div id="pingu"><label>Pingwin133</label></div>
+        <div id="xori"><label>Xori</label></div>
+    </section>
+
+    <footer>
+        Created by Pingwin133 & xori<br>
+        Empowered by <a href="https://github.com/">GitHub</a>
+    </footer>
 </body>
 </html>
