--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
     <link rel="stylesheet" href="styles/style.css">
 
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
