--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <footer>
         Created by Pingwin133 & xori<br>
-        Empowered by <a href="https://github.com/">GitHub</a>
+        Powered by <a href="https://github.com/">GitHub</a>
     </footer>
 </body>
 </html>
