--- a/index.html
+++ b/index.html
@@ -25,8 +25,15 @@
     </header>
 
     <section>
-        <div id="pingu"><label>Pingwin133</label></div>
-        <div id="xori"><label>Xori</label></div>
+        <div id="pingu">
+            <label>Pingwin133</label>
+            <ol>
+                <li><a href="https://fragilehub.github.io">FragileHub</a></li>
+            </ol>
+        </div>
+        <div id="xori">
+            <label>Xori</label>
+        </div>
     </section>
 
     <footer>
