--- a/index.html
+++ b/index.html
@@ -1,44 +1,56 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv='cache-control' content='no-cache'> 
-    <meta http-equiv='expires' content='0'> 
-    <meta http-equiv='pragma' content='no-cache'>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="pragma" content="no-cache" />
 
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.css" />
 
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+      rel="stylesheet"
+    />
 
     <script src="scripts/script.js" defer></script>
 
-    <title>🥛 | 𝙵𝚛𝚊𝚐𝚒𝚕𝚎𝙷𝚞𝚋 </title>
-</head>
-<body>
+    <title>🥛 | 𝙵𝚛𝚊𝚐𝚒𝚕𝚎𝙷𝚞𝚋</title>
+  </head>
+  <body>
     <header>
-        Welcome to <h2>FragileHub!</h2>
+      Welcome to
+      <h2>FragileHub!</h2>
     </header>
 
+    <div class="timer">00:00:00</div>
+
     <section>
-        <div id="pingu">
-            <label>Pingwin133</label>
-            <ul>
-                <li><a href="https://fragilehub.github.io">FragileHub</a></li>
-            </ul>
-        </div>
-        <div id="xori">
-            <label>Xori</label>
-        </div>
+      <div id="pingu">
+        <label>Pingwin133</label>
+        <article class="inv">
+          <ul>
+            <li>
+              <a href="https://fragilehub.github.io" class="link">FragileHub</a>
+            </li>
+          </ul>
+        </article>
+      </div>
+      <div id="xori">
+        <label>Xori</label>
+        <article class="inv"></article>
+      </div>
     </section>
 
     <footer>
-        Created by Pingwin133 & xori<br>
-        Powered by <a href="https://github.com/" target="_blank">GitHub</a>
+      Created by Pingwin133 & xori<br />
+      Powered by
+      <a href="https://github.com/" target="_blank" class="link">GitHub</a>
     </footer>
-</body>
+  </body>
 </html>
