--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="expires" content="0" />
     <meta http-equiv="pragma" content="no-cache" />
 
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/style.css">
 
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
 
